--- a/src/main/resources/static/css/mycss.css
+++ b/src/main/resources/static/css/mycss.css
@@ -2,6 +2,11 @@
     margin-bottom: 6px;
 }
 
+.login-container {
+    width: 450px;
+    margin: 0 auto;
+}
+
 .profile-user-info {
  display:table;
  width:98%;
