--- a/src/main/resources/templates/fragments/header.html
+++ b/src/main/resources/templates/fragments/header.html
@@ -23,13 +23,11 @@
 					<ul class="nav ace-nav">
 						
 						
-						<li class="light-blue dropdown-modal">
-							<a data-toggle="dropdown" href="#" class="dropdown-toggle">
-								<img class="nav-user-photo" th:src="@{images/avatars/avatar4.png}" alt="Photo" />
-								
+						<li class="light-blue dropdown-modal" >
+							<a data-toggle="dropdown" class="dropdown-toggle">															
 								<span class="user-info">
 									<small>Welcome,</small>
-									Surya
+									[[${#httpServletRequest.remoteUser}]]
 								</span>
 
 								<i class="ace-icon fa fa-caret-down"></i>
@@ -44,7 +42,7 @@
 								</li>
 
 								<li>
-									<a href="profile.html">
+									<a th:href="@{/password}">
 										<i class="ace-icon fa fa-cog"></i>
 										Change Password
 									</a>
@@ -53,10 +51,15 @@
 								<li class="divider"></li>
 
 								<li>
-									<a href="#">
-										<i class="ace-icon fa fa-power-off"></i>
-										Logout
+								
+									<a href="javascript: document.logoutForm.submit()" role="menuitem"> 
+									<i class="ace-icon fa fa-power-off"></i>
+									Logout
 									</a>
+
+   									<form name="logoutForm" th:action="@{/logout}" method="post" th:hidden="true">
+      									<input hidden type="submit" value="Sign Out"/>
+   									</form> 
 								</li>
 							</ul>
 						</li>
