--- a/src/main/resources/templates/fragments/script.html
+++ b/src/main/resources/templates/fragments/script.html
@@ -11,12 +11,14 @@
 			if('ontouchstart' in document.documentElement) document.write("<script src='assets/js/jquery.mobile.custom.min.js'>"+"<"+"/script>");
 		</script>
 		
+		<script src="../static/js/dropzone.min.js" th:src="@{/js/dropzone.min.js/}"></script>
+		
 		<script src="../static/js/bootstrap.min.js" th:src="@{/js/bootstrap.min.js/}"></script>
 
 
 		<!-- ace scripts -->
 		<script src="../static/js/ace-elements.min.js" th:src="@{/js/ace-elements.min.js/}"></script>
 		<script src="../static/js/ace.min.js" th:src="@{/js/ace.min.js/}"></script>
-		
+		 <script type="text/javascript" href="../static/js/validator.js" th:src="@{/js/validator.js/}"></script> 
 
 		
