--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -6,5 +6,10 @@
 </head>
 <body>
 <h1>Welcome</h1>
+
+				<a th:href="@{/form}">
+					<i class="menu-icon fa fa-tachometer"></i>
+					<span class="menu-text"> Dashboard </span>
+				</a>
 </body>
 </html>
