--- a/src/main/resources/templates/plantform.html
+++ b/src/main/resources/templates/plantform.html
@@ -2,11 +2,11 @@
 <html xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout" layout:decorator="layouts/default">
 <head>
 	<meta charset="ISO-8859-1"/>
-	<title>Create User Page</title>
+	<title>Add Plant</title>
 </head>
 <body>
    
-    <div layout:fragment="content">
+     <div layout:fragment="content">
 				
 			<div class="breadcrumbs ace-save-state" id="breadcrumbs">
 				<ul class="breadcrumb">
@@ -37,7 +37,8 @@
 
 						<div class="row">
 							<div class="col-xs-12">
-							<form class="form-horizontal" method="POST" enctype="multipart/form-data" action="/file/upload" modelAttribute="plant">
+							<form class="form-horizontal"  id="dropzone-form" method="POST" enctype="multipart/form-data" action="/file/upload" modelAttribute="plant">
+								
 								<div class="col-xs-7">
 									<!-- PAGE CONTENT BEGINS -->
 									
@@ -183,9 +184,9 @@
 								<div class="col-xs-5">							
 
 									<div>
-										<div action="./dummy.html" class="dropzone well" id="dropzone">
+										<div  action="/dropzone/upload" class="dropzone well" id="dropzone">
 											<div class="fallback">
-												File to upload:<input type="file" name="file" />
+												File to upload:<input type="file" name="file" accept="image/x-png,image/gif,image/jpeg" />
 											</div>
 										</div>
 									</div>
@@ -203,6 +204,7 @@
 									<div id="preview-template" class="hide">
 										<div class="dz-preview dz-file-preview">
 											<div class="dz-image">
+											
 												<img data-dz-thumbnail="" />
 											</div>
 
@@ -251,7 +253,108 @@
 			
 				
 	</div><!-- /.main-content -->
-    
+	
+	
+	<th:block layout:fragment="scripts">
+	
+		<script type="text/javascript">
 
+			jQuery(function($){
+			
+			try {
+			  Dropzone.autoDiscover = false;
+			
+			  var myDropzone = new Dropzone('#dropzone', {
+				  url:"/dropzone/upload",
+			    previewTemplate: $('#preview-template').html(),
+			    
+				thumbnailHeight: 120,
+			    thumbnailWidth: 120,
+			    maxFilesize: 0.5,
+				
+				//addRemoveLinks : true,
+				//dictRemoveFile: 'Remove',
+				
+				dictDefaultMessage :
+				'<span class="bigger-150 bolder"><i class="ace-icon fa fa-caret-right red"></i> Drop leaf image</span> to upload \
+				<span class="smaller-80 grey">(or click to Upload)</span> <br /> \
+				<i class="upload-icon ace-icon fa fa-cloud-upload blue fa-3x"></i>',
+			
+				
+			    thumbnail: function(file, dataUrl) {
+			      if (file.previewElement) {
+			        $(file.previewElement).removeClass("dz-file-preview");
+			        var images = $(file.previewElement).find("[data-dz-thumbnail]").each(function() {
+						var thumbnailElement = this;
+						thumbnailElement.alt = file.name;
+						thumbnailElement.src = dataUrl;
+					});
+			        setTimeout(function() { $(file.previewElement).addClass("dz-image-preview"); }, 1);
+			      }
+			    }
+			
+			  });
+			
+			
+			  //simulating upload progress
+			  var minSteps = 6,
+			      maxSteps = 60,
+			      timeBetweenSteps = 100,
+			      bytesPerStep = 100000;
+			
+			  myDropzone.uploadFiles = function(files) {
+			    var self = this;
+			
+			    for (var i = 0; i < files.length; i++) {
+			      var file = files[i];
+			          totalSteps = Math.round(Math.min(maxSteps, Math.max(minSteps, file.size / bytesPerStep)));
+			
+			      for (var step = 0; step < totalSteps; step++) {
+			        var duration = timeBetweenSteps * (step + 1);
+			        setTimeout(function(file, totalSteps, step) {
+			          return function() {
+			            file.upload = {
+			              progress: 100 * (step + 1) / totalSteps,
+			              total: file.size,
+			              bytesSent: (step + 1) * file.size / totalSteps
+			            };
+			
+			            self.emit('uploadprogress', file, file.upload.progress, file.upload.bytesSent);
+			            if (file.upload.progress == 100) {
+			              file.status = Dropzone.SUCCESS;
+			              self.emit("success", file, 'success', null);
+			              self.emit("complete", file);
+			              self.processQueue();
+			            }
+			          };
+			        }(file, totalSteps, step), duration);
+			      }
+			    }
+			   }
+			
+			   
+			   //remove dropzone instance when leaving this page in ajax mode
+			   $(document).one('ajaxloadstart.page', function(e) {
+					try {
+						myDropzone.destroy();
+					} catch(e) {}
+			   });
+			
+			} catch(e) {
+			  alert('Dropzone.js does not support older browsers!');
+			}
+			
+			});
+			autosize($('textarea[class*=autosize]'));
+		
+				$(document).one('ajaxloadstart.page', function(e) {
+					autosize.destroy('textarea[class*=autosize]')				
+					
+				});
+			
+			
+		</script>
+	</th:block>
+    
 </body>
 </html>
