--- a/src/main/resources/templates/register.html
+++ b/src/main/resources/templates/register.html
@@ -1,34 +1,18 @@
 <!DOCTYPE html>
-<html xmlns="http://www.w3.org/1999/xhtml" xmlns:th="http://www.thymeleaf.org" lang="en">
+<html xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout" layout:decorator="layouts/default">
 	<head>
 		<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
 		<meta charset="utf-8" />
-		<title>Signup page</title>
-
-		<meta name="description" content="User Register page" />
-		<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0" />
-
-		<!-- bootstrap & fontawesome -->
-		
-		<link rel="stylesheet" href="../static/css/bootstrap.min.css" th:href="@{/css/bootstrap.min.css}" />
-		<link rel="stylesheet" href="../static/font-awesome/4.5.0/css/font-awesome.min.css" th:href="@{/font-awesome/4.5.0/css/font-awesome.min.css}" />
-
-		<!-- text fonts -->
-		<link rel="stylesheet" href="../static/css/fonts.googleapis.com.css" th:href="@{/css/fonts.googleapis.com.css}" />
-
-		<!-- ace styles -->
-		<link rel="stylesheet" href="../static/css/ace.min.css" th:href="@{/css/ace.min.css}"/>
-
-		
-
+		<title>User Register Page</title>
 		
 	</head>
 
-	<body class="login-layout">
-		<div class="main-container">
+	<body>
+	<div >
+		<div  class="main-container">
 			<div class="main-content">
 				<div class="row">
-					<div class="col-sm-10 col-sm-offset-1">
+					<div class="col-sm-10 col-sm-offset-1" layout:fragment="content">
 						<div class="login-container">
 							<div class="center">
 								<h1>
@@ -38,10 +22,8 @@
 								</h1>
 								
 							</div>
-
-							<div class="space-6"></div>
-
-							<div class="position-relative">
+	
+					<div class="position-relative">
 								
 								<div id="signup-box" class="signup-box visible widget-box no-border">
 									<div class="widget-body">
@@ -51,48 +33,61 @@
 												New User Registration
 											</h4>
 
-											<div class="space-6"></div>
-											<p> Enter your details to begin: </p>
 
-											<form>
-												<fieldset>
-													<label class="block clearfix">
-														<span class="block input-icon input-icon-right">
-															<input type="email" class="form-control" placeholder="Email" />
-															<i class="ace-icon fa fa-envelope"></i>
-														</span>
-													</label>
+								<form th:action="@{/register}" th:object="${appUserForm}" method="POST" data-toggle="validator" role="form" >
+									<fieldset>
+									<div class="form-group">
+					                      <label class="block clearfix" for="inputName">First Name</label>
+					                      <span class="block input-icon input-icon-right">
+					                      <input class="form-control" name ="firstName" data-error="Please enter name field." id="firstName" placeholder="First Name"  type="text" required />
+					                      <i class="ace-icon fa fa-user"></i>
+						                    </span>
+					                      <div class="help-block with-errors"></div>
+				                  	</div>
+									<div class="form-group">
+				                      <label class="block clearfix" for="lastName">Last Name</label>
+				                      <span class="block input-icon input-icon-right">
+				                      <input class="form-control" name ="lastName" data-error="Please enter name field." id="lastName" placeholder="Last Name"  type="text" required />
+				                       <i class="ace-icon fa fa-user"></i>
+						               </span>
+				                      <div class="help-block with-errors"></div>
+				                   </div>			
+									<div class="form-group">
+					                    <label for="inputEmail" class="block clearfix">Email</label>
+					                    <span class="block input-icon input-icon-right">
+					                    <input type="email" class="form-control" id="inputEmail"  name ="email" placeholder="Email" required/>
+					                    <i class="ace-icon fa fa-envelope"></i>
+					                    </span>
+					                    <div class="help-block with-errors"></div>
+					                </div>
+					                
+					                <div class="form-group">
+									    <label for="inputPassword" class="block clearfix">Password</label>
+									      <span class="block input-icon input-icon-right">
+									         <input type="password" data-minlength="5" class="form-control" id="inputPassword" data-error="must enter minimum of 5 characters" placeholder="Password" required>
+									           <i class="ace-icon fa fa-lock"></i>
+					                   			 </span>          
+									         <div class="help-block with-errors"></div>
+									 </div>
+									      <div class="form-group">
+									      <label for="inputPasswordConfirm" class="block clearfix">Confirm Password</label>
+									      <span class="block input-icon input-icon-right">
+									        <input type="password" name="password" class="form-control" id="inputPasswordConfirm" data-match="#inputPassword" data-match-error="Whoops, password don't match" placeholder="Confirm" required>
+									        <i class="ace-icon fa fa-retweet"></i>
+					                    </span>
+									        <div class="help-block with-errors"></div>
+									      </div>
+									      
+										<div class="form-group">
+					                      <label class="block clearfix" for="address">Address</label>
+					                      <span class="block input-icon input-icon-right">
+					                      <input class="form-control" name ="address" data-error="Please enter name field." id="address" placeholder="Address"  type="text" required />
+					                      <i class="ace-icon fa fa-home"></i>
+					                    </span>
+					                      <div class="help-block with-errors"></div>
+					                  </div>
 
-													<label class="block clearfix">
-														<span class="block input-icon input-icon-right">
-															<input type="text" class="form-control" placeholder="Username" />
-															<i class="ace-icon fa fa-user"></i>
-														</span>
-													</label>
-
-													<label class="block clearfix">
-														<span class="block input-icon input-icon-right">
-															<input type="password" class="form-control" placeholder="Password" />
-															<i class="ace-icon fa fa-lock"></i>
-														</span>
-													</label>
-
-													<label class="block clearfix">
-														<span class="block input-icon input-icon-right">
-															<input type="password" class="form-control" placeholder="Repeat password" />
-															<i class="ace-icon fa fa-retweet"></i>
-														</span>
-													</label>
-
-													<label class="block">
-														<input type="checkbox" class="ace" />
-														<span class="lbl">
-															I accept the
-															<a href="#">User Agreement</a>
-														</span>
-													</label>
-
-													<div class="space-24"></div>
+													<div class="space-10"></div>
 
 													<div class="clearfix">
 														<button type="reset" class="width-30 pull-left btn btn-sm">
@@ -100,7 +95,7 @@
 															<span class="bigger-110">Reset</span>
 														</button>
 
-														<button type="button" class="width-65 pull-right btn btn-sm btn-success">
+														<button type="submit"class="width-65 pull-right btn btn-sm btn-success">
 															<span class="bigger-110">Register</span>
 
 															<i class="ace-icon fa fa-arrow-right icon-on-right"></i>
@@ -110,12 +105,7 @@
 											</form>
 										</div>
 
-										<div class="toolbar center">
-											<a href="#" data-target="#login-box" class="back-to-login-link">
-												<i class="ace-icon fa fa-arrow-left"></i>
-												Back to login
-											</a>
-										</div>
+										
 									</div><!-- /.widget-body -->
 								</div><!-- /.signup-box -->
 							</div><!-- /.position-relative -->
@@ -126,7 +116,7 @@
 				</div><!-- /.row -->
 			</div><!-- /.main-content -->
 		</div><!-- /.main-container -->
-
+</div>
 		<!-- basic scripts -->
 
 		<!--[if !IE]> -->
