--- a/src/main/resources/templates/viewallplant.html
+++ b/src/main/resources/templates/viewallplant.html
@@ -38,58 +38,64 @@
 											<table id="dynamic-table" class="table table-striped table-bordered table-hover">
 												<thead>
 													<tr>
-														<th>Image</th>
-														<th>Kingdom</th>
-														<th>Sub-Kingdom</th>
-														<th>Division</th>
-														<th>Phylum</th>
-														<th>Class Name</th>
-														<th>Sub-Class</th>
-														<th>Order</th>
-														<th>Genus</th>
-														<th>Species</th>
-														<th>Common Name</th>
-														<th>Description</th>													
-														<th></th>
+														<th width="10%">Image</th>														
+														<th width="10%">Sub-Kingdom</th>
+														<th width="10%">Division</th>
+														<th width="10%">Phylum</th>
+														<th width="10%">Class Name</th>														
+														<th width="10%">Family</th>
+														<th width="10%">Genus</th>
+														<th width="10%">Species</th>
+														<th width="10%">Common Name</th>																									
+														<th width="5%">Edit</th>
+														<th width="5%">Delete</th>
 													</tr>
 												</thead>
 
-												<tbody>
-													<tr>	
-														<td>test</td>													
-														<td>test</td>														
-														<td>test</td>
-														<td>test</td>
-														<td>test</td>														
-														<td>test</td>
-														<td>test</td>
-														<td>test</td>														
-														<td>test</td>
-														<td>test</td>
-														<td>test</td>
-														<td>test</td>
-														<td>
-															<div class="hidden-sm hidden-xs action-buttons">
-																<a class="blue" href="#">
-																	<i class="ace-icon fa fa-search-plus bigger-130"></i>
-																</a>
+									<tbody>
+										<tr th:each = "plantList :${plantList}">  		
+											<td><a class="blue" th:href="@{'/viewplant/'+${plantList.id}}">
+											<img th:src="@{'/file/'+${plantList.imageUrl}}" alt="image" style="width:72px;height:72px"/>
+											</a>
+											</td>																																								
+											<td th:text ="${plantList?.subKingdom}">test</td>
+											<td th:text ="${plantList?.division}">test</td>														
+											<td th:text ="${plantList?.phylum}">test</td>
+											<td th:text ="${plantList?.className}">test</td>													
+											<td th:text ="${plantList?.family}">test</td>
+											<td th:text ="${plantList?.genus}">test</td>
+											<td th:text ="${plantList?.species}">test</td>
+											<td th:text ="${plantList?.commonName}">test</td>
+											<td>
+											<!--edit button-->
+												 <div class="hidden-sm hidden-xs action-buttons">                              												
+													
+												
+													<a class="btn btn-success" th:href="@{'/update/'+${plantList.id}}">
+														<i class="glyphicon glyphicon-pencil"></i>
+													</a>
+													</div>
+													
+											</td>
+											<td>		
+											<!--Delete button-->
+													<div class="hidden-sm hidden-xs action-buttons">
+													
+													<form th:action="@{/plant/delete}" th:method="delete">		
+														<input type="hidden" name="id" th:value="${plantList.id}"/>
+														<button class="btn btn-danger " type="submit" value="Delete" ><span class="glyphicon glyphicon-trash"></span></button>
+														<!-- <input class="btn btn-danger" type="submit" value="Delete"/> -->
+													</form>	
+												
+											 </div>
 
-																<a class="green" href="#">
-																	<i class="ace-icon fa fa-pencil bigger-130"></i>
-																</a>
-
-																<a class="red" href="#">
-																	<i class="ace-icon fa fa-trash-o bigger-130"></i>
-																</a>
-															</div>
-
-														</td>														
-														
-														
-													</tr>
+											</td>														
+											
+											
+										</tr>
 
 
-												</tbody>
+									</tbody>
 											</table>
 										</div>													
 									
@@ -122,7 +128,8 @@
 					bAutoWidth: false,
 					"aoColumns": [
 					  { "bSortable": false },
-					  null, null,null, null, null,
+					  null, null,null, null, null, null, null, null,
+					  { "bSortable": false },
 					  { "bSortable": false }
 					],
 					"aaSorting": [],
