--- a/src/main/resources/static/css/mycss.css
+++ b/src/main/resources/static/css/mycss.css
@@ -7,6 +7,38 @@
     margin: 0 auto;
 }
 
+.user-info {
+    max-width: 300px;
+    display: inline-block;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    white-space: nowrap;
+    text-align: left;
+    vertical-align: top;
+    line-height: 15px;
+    position: relative;
+    top: 6px;
+}
+
+.navbar {
+    margin: 0;
+    padding-left: 0;
+    padding-right: 0;
+    border-width: 0;
+    border-radius: 0;
+    -webkit-box-shadow: none;
+    box-shadow: none;
+    min-height: 45px;
+    background: #108916;
+}
+
+.ace-nav>li.light-blue>a {
+    background-color: #1fa025f5;
+}
+.ace-nav>li.light-blue>a:focus, .ace-nav>li.light-blue>a:hover, .ace-nav>li.open.light-blue>a {
+    background-color: #0d7212;
+}
+
 .profile-user-info {
  display:table;
  width:98%;
