--- a/src/main/resources/templates/updateplant.html
+++ b/src/main/resources/templates/updateplant.html
@@ -6,7 +6,7 @@
 </head>
 <body>
    
-     <div layout:fragment="content">
+    <div layout:fragment="content">
 				
 			<div class="breadcrumbs ace-save-state" id="breadcrumbs">
 				<ul class="breadcrumb">
@@ -37,17 +37,22 @@
 
 						<div class="row">
 							<div class="col-xs-12">
-							<form class="form-horizontal"  id="dropzone-form" method="POST" enctype="multipart/form-data" action="/file/upload" modelAttribute="plant">
-								
+							
+							<form th:object="${plant}" class="form-horizontal" method="POST" enctype="multipart/form-data" action="/update" modelAttribute="plant">
+								<input
+									  type="hidden"
+									  th:name="${_csrf.parameterName}"
+									  th:value="${_csrf.token}" />
 								<div class="col-xs-7">
 									<!-- PAGE CONTENT BEGINS -->
 									
-										
+										<input type="hidden" name="id" th:value="${plant.id}"/>
+										<input type="hidden" name="imageUrl" th:value="${plant.imageUrl}"/>
 										<div class="form-group">
 											<label class="col-sm-4 control-label no-padding-right" for="form-field-1"> Kingdom </label>
 
 											<div class="col-sm-8">
-												<input type="text" id="form-field-1" name="kingdom" placeholder="Kingdom" class="col-xs-12" />
+												<input type="text" id="form-field-1" th:value="${plant.kingdom}" name="kingdom" placeholder="Kingdom" class="col-xs-12" />
 											</div>
 										</div>
 
@@ -57,7 +62,7 @@
 											<label class="col-sm-4 control-label no-padding-right" for="form-field-2"> Sub-Kingdom </label>
 
 											<div class="col-sm-8">
-												<input type="text" id="form-field-2" name="subKingdom" placeholder="Sub-Kingdom" class="col-xs-12" />											
+												<input type="text" id="form-field-2" th:value="${plant.subKingdom}" name="subKingdom" placeholder="Sub-Kingdom" class="col-xs-12" />											
 											</div>
 										</div>
 										
@@ -67,7 +72,7 @@
 											<label class="col-sm-4 control-label no-padding-right" for="form-field-3"> Super Division </label>
 
 											<div class="col-sm-8">
-												<input type="text" id="form-field-3" name="superDivision" placeholder="Super-Division" class="col-xs-12" />											
+												<input type="text" id="form-field-3" th:value="${plant.superDivision}" name="superDivision" placeholder="Super-Division" class="col-xs-12" />											
 											</div>
 										</div>
 
@@ -77,7 +82,7 @@
 											<label class="col-sm-4 control-label no-padding-right" for="form-field-3-1"> Division </label>
 
 											<div class="col-sm-8">
-												<input type="text" id="form-field-3-1" name="division" placeholder="Division" class="col-xs-12" />											
+												<input type="text" id="form-field-3-1" th:value="${plant.division}" name="division" placeholder="Division" class="col-xs-12" />											
 											</div>
 										</div>
 
@@ -87,7 +92,7 @@
 											<label class="col-sm-4 control-label no-padding-right" for="form-field-4"> Phylum </label>
 
 											<div class="col-sm-8">
-												<input type="text" id="form-field-4" name="phylum" placeholder="Phylum" class="col-xs-12" />											
+												<input type="text" id="form-field-4" th:value="${plant.phylum}" name="phylum" placeholder="Phylum" class="col-xs-12" />											
 											</div>
 										</div>
 
@@ -97,7 +102,7 @@
 											<label class="col-sm-4 control-label no-padding-right" for="form-field-5"> Class Name </label>
 
 											<div class="col-sm-8">
-												<input type="text" id="form-field-5" name="className" placeholder="Class Name" class="col-xs-12" />											
+												<input type="text" id="form-field-5" th:value="${plant.className}" name="className" placeholder="Class Name" class="col-xs-12" />											
 											</div>
 										</div>
 
@@ -108,7 +113,7 @@
 												Sub-Class </label>
 
 											<div class="col-sm-8">
-												<input type="text" id="form-field-6" name="subClass" placeholder="Sub-Class" class="col-xs-12" />											
+												<input type="text" id="form-field-6" th:value="${plant.subClass}" name="subClass" placeholder="Sub-Class" class="col-xs-12" />											
 											</div>
 										</div>
 
@@ -118,7 +123,7 @@
 											<label class="col-sm-4 control-label no-padding-right" for="form-field-7"> Order </label>
 
 											<div class="col-sm-8">
-												<input type="text" id="form-field-7" name="order" placeholder="Order" class="col-xs-12" />											
+												<input type="text" id="form-field-7" th:value="${plant.order}" name="order" placeholder="Order" class="col-xs-12" />											
 											</div>
 										</div>
 										<div class="space-2"></div>
@@ -127,7 +132,7 @@
 											<label class="col-sm-4 control-label no-padding-right" for="form-field-7-1"> Family </label>
 
 											<div class="col-sm-8">
-												<input type="text" id="form-field-7-1" name="family" placeholder="Family" class="col-xs-12" />											
+												<input type="text" id="form-field-7-1" th:value="${plant.family}" name="family" placeholder="Family" class="col-xs-12" />											
 											</div>
 										</div>
 
@@ -137,7 +142,7 @@
 											<label class="col-sm-4 control-label no-padding-right" for="form-field-8"> Genus </label>
 
 											<div class="col-sm-8">
-												<input type="text" id="form-field-8" name="genus" placeholder="Genus" class="col-xs-12" />											
+												<input type="text" id="form-field-8" th:value="${plant.genus}" name="genus" placeholder="Genus" class="col-xs-12" />											
 											</div>
 										</div>
 
@@ -147,7 +152,7 @@
 											<label class="col-sm-4 control-label no-padding-right" for="form-field-9"> Species </label>
 
 											<div class="col-sm-8">
-												<input type="text" id="form-field-9" name="species" placeholder="Species" class="col-xs-12" />											
+												<input type="text" id="form-field-9" th:value="${plant.species}" name="species" placeholder="Species" class="col-xs-12" />											
 											</div>
 										</div>
 
@@ -157,7 +162,7 @@
 											<label class="col-sm-4 control-label no-padding-right" for="form-field-10"> Common Name </label>
 
 											<div class="col-sm-8">
-												<input type="text" id="form-field-10" name="commonName" placeholder="Common Name" class="col-xs-12" />											
+												<input type="text" id="form-field-10" th:value="${plant.commonName}" name="commonName"  class="col-xs-12" />											
 											</div>
 										</div>
 
@@ -184,9 +189,9 @@
 								<div class="col-xs-5">							
 
 									<div>
-										<div  action="/dropzone/upload" class="dropzone well" id="dropzone">
+										<div  class="dropzone well" id="dropzone">
 											<div class="fallback">
-												File to upload:<input type="file" name="file" accept="image/x-png,image/gif,image/jpeg" />
+												File to upload:<input type="file" name="file" accept="image/x-png,image/gif,image/jpeg"/>
 											</div>
 										</div>
 									</div>
@@ -197,14 +202,13 @@
 											<label class="col-sm-2 control-label no-padding-right" for="form-field-11"> Description </label>
 											<div class="col-sm-10">
 
-											<textarea id="form-field-11" name="description" placeholder="Write some description.." class="autosize-transition form-control"></textarea>
+											<textarea id="form-field-11" name="description" th:field="${plant.description}" class="autosize-transition form-control"></textarea>
 										</div>
 										</div>
 
 									<div id="preview-template" class="hide">
 										<div class="dz-preview dz-file-preview">
 											<div class="dz-image">
-											
 												<img data-dz-thumbnail="" />
 											</div>
 
@@ -242,8 +246,8 @@
 												</span>
 											</div>
 										</div>
-									</div><!-- PAGE CONTENT ENDS -->
-								</div><!-- /.col -->
+									</div>
+								</div>
 							</form>
 						
 
@@ -253,108 +257,7 @@
 			
 				
 	</div><!-- /.main-content -->
-	
-	
-	<th:block layout:fragment="scripts">
-	<script src="../static/js/autosize.min.js" th:src="@{/js/autosize.min.js/}"></script>
-		<script type="text/javascript">
-
-			jQuery(function($){
-			
-			try {
-			  Dropzone.autoDiscover = false;
-			
-			  var myDropzone = new Dropzone('#dropzone', {
-				  url:"/dropzone/upload",
-			    previewTemplate: $('#preview-template').html(),
-			    
-				thumbnailHeight: 120,
-			    thumbnailWidth: 120,
-			    maxFilesize: 0.5,
-				
-				//addRemoveLinks : true,
-				//dictRemoveFile: 'Remove',
-				
-				dictDefaultMessage :
-				'<span class="bigger-150 bolder"><i class="ace-icon fa fa-caret-right red"></i> Drop leaf image</span> to upload \
-				<span class="smaller-80 grey">(or click to Upload)</span> <br /> \
-				<i class="upload-icon ace-icon fa fa-cloud-upload blue fa-3x"></i>',
-			
-				
-			    thumbnail: function(file, dataUrl) {
-			      if (file.previewElement) {
-			        $(file.previewElement).removeClass("dz-file-preview");
-			        var images = $(file.previewElement).find("[data-dz-thumbnail]").each(function() {
-						var thumbnailElement = this;
-						thumbnailElement.alt = file.name;
-						thumbnailElement.src = dataUrl;
-					});
-			        setTimeout(function() { $(file.previewElement).addClass("dz-image-preview"); }, 1);
-			      }
-			    }
-			
-			  });
-			
-			
-			  //simulating upload progress
-			  var minSteps = 6,
-			      maxSteps = 60,
-			      timeBetweenSteps = 100,
-			      bytesPerStep = 100000;
-			
-			  myDropzone.uploadFiles = function(files) {
-			    var self = this;
-			
-			    for (var i = 0; i < files.length; i++) {
-			      var file = files[i];
-			          totalSteps = Math.round(Math.min(maxSteps, Math.max(minSteps, file.size / bytesPerStep)));
-			
-			      for (var step = 0; step < totalSteps; step++) {
-			        var duration = timeBetweenSteps * (step + 1);
-			        setTimeout(function(file, totalSteps, step) {
-			          return function() {
-			            file.upload = {
-			              progress: 100 * (step + 1) / totalSteps,
-			              total: file.size,
-			              bytesSent: (step + 1) * file.size / totalSteps
-			            };
-			
-			            self.emit('uploadprogress', file, file.upload.progress, file.upload.bytesSent);
-			            if (file.upload.progress == 100) {
-			              file.status = Dropzone.SUCCESS;
-			              self.emit("success", file, 'success', null);
-			              self.emit("complete", file);
-			              self.processQueue();
-			            }
-			          };
-			        }(file, totalSteps, step), duration);
-			      }
-			    }
-			   }
-			
-			   
-			   //remove dropzone instance when leaving this page in ajax mode
-			   $(document).one('ajaxloadstart.page', function(e) {
-					try {
-						myDropzone.destroy();
-					} catch(e) {}
-			   });
-			
-			} catch(e) {
-			  alert('Dropzone.js does not support older browsers!');
-			}
-			
-			});
-			autosize($('textarea[class*=autosize]'));
-		
-				$(document).one('ajaxloadstart.page', function(e) {
-					autosize.destroy('textarea[class*=autosize]')				
-					
-				});
-			
-			
-		</script>
-	</th:block>
     
+
 </body>
 </html>
