--- a/src/main/resources/templates/register.html
+++ b/src/main/resources/templates/register.html
@@ -13,6 +13,11 @@
 			<div class="main-content">
 				<div class="row">
 					<div class="col-sm-10 col-sm-offset-1" layout:fragment="content">
+					
+							<div th:if="${message}">
+								<h2 class="alert alert-danger" th:text="${message}"/>
+							</div>
+	
 						<div class="login-container">
 							<div class="center">
 								<h1>
