users page added

--- a/src/main/resources/templates/webusers/homepage.html
+++ b/src/main/resources/templates/webusers/homepage.html
@@ -15,7 +15,7 @@
 		<!-- meta character set -->
 		<meta charset="UTF-8">
 		<!-- Site Title -->
-		<title>Book</title>		
+		<title>Home</title>		
 			<link rel="stylesheet" href="../static/css/vendor/bootstrap.css" th:href="@{/css/vendor/bootstrap.css}" />
 			<link rel="stylesheet" href="../static/css/vendor/linearicons.css" th:href="@{/css/vendor/linearicons.css}" />
 			<link rel="stylesheet" href="../static/font-awesome/4.5.0/css/font-awesome.min.css" th:href="@{/font-awesome/4.5.0/css/font-awesome.min.css}" />
